logs/scheduler/2023-02-01/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py.log
[2023-02-01 15:51:50,130] {processor.py:153} INFO - Started process (PID=11954) to work on /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:51:50,131] {processor.py:641} INFO - Processing file /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py for tasks to queue
[2023-02-01 15:51:50,132] {logging_mixin.py:115} INFO - [2023-02-01 15:51:50,132] {dagbag.py:507} INFO - Filling up the DagBag from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:51:50,165] {logging_mixin.py:115} INFO - [2023-02-01 15:51:50,164] {dagbag.py:320} ERROR - Failed to import: /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
Traceback (most recent call last):
  File "/home/tinmar/.local/lib/python3.10/site-packages/airflow/models/dagbag.py", line 317, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py", line 15
    from Airflow2-0-De-0-a-Heroe.pyspark_subdag import mySubDag
                 ^
SyntaxError: invalid syntax
[2023-02-01 15:51:50,165] {processor.py:653} WARNING - No viable dags retrieved from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:51:50,204] {processor.py:161} INFO - Processing /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py took 0.078 seconds
[2023-02-01 15:52:20,495] {processor.py:153} INFO - Started process (PID=11974) to work on /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:52:20,496] {processor.py:641} INFO - Processing file /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py for tasks to queue
[2023-02-01 15:52:20,496] {logging_mixin.py:115} INFO - [2023-02-01 15:52:20,496] {dagbag.py:507} INFO - Filling up the DagBag from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:52:20,525] {logging_mixin.py:115} INFO - [2023-02-01 15:52:20,524] {dagbag.py:320} ERROR - Failed to import: /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
Traceback (most recent call last):
  File "/home/tinmar/.local/lib/python3.10/site-packages/airflow/models/dagbag.py", line 317, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py", line 15
    from Airflow2-0-De-0-a-Heroe.pyspark_subdag import mySubDag
                 ^
SyntaxError: invalid syntax
[2023-02-01 15:52:20,525] {processor.py:653} WARNING - No viable dags retrieved from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:52:20,561] {processor.py:161} INFO - Processing /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py took 0.069 seconds
[2023-02-01 15:52:51,030] {processor.py:153} INFO - Started process (PID=11994) to work on /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:52:51,031] {processor.py:641} INFO - Processing file /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py for tasks to queue
[2023-02-01 15:52:51,031] {logging_mixin.py:115} INFO - [2023-02-01 15:52:51,031] {dagbag.py:507} INFO - Filling up the DagBag from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:52:51,062] {logging_mixin.py:115} INFO - [2023-02-01 15:52:51,061] {dagbag.py:320} ERROR - Failed to import: /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
Traceback (most recent call last):
  File "/home/tinmar/.local/lib/python3.10/site-packages/airflow/models/dagbag.py", line 317, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py", line 15
    from Airflow2-0-De-0-a-Heroe.pyspark_subdag import mySubDag
                 ^
SyntaxError: invalid syntax
[2023-02-01 15:52:51,062] {processor.py:653} WARNING - No viable dags retrieved from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:52:51,101] {processor.py:161} INFO - Processing /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py took 0.073 seconds
[2023-02-01 15:53:21,178] {processor.py:153} INFO - Started process (PID=12014) to work on /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:53:21,178] {processor.py:641} INFO - Processing file /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py for tasks to queue
[2023-02-01 15:53:21,179] {logging_mixin.py:115} INFO - [2023-02-01 15:53:21,179] {dagbag.py:507} INFO - Filling up the DagBag from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:53:21,208] {logging_mixin.py:115} INFO - [2023-02-01 15:53:21,207] {dagbag.py:320} ERROR - Failed to import: /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
Traceback (most recent call last):
  File "/home/tinmar/.local/lib/python3.10/site-packages/airflow/models/dagbag.py", line 317, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py", line 15
    from Airflow2-0-De-0-a-Heroe.pyspark_subdag import mySubDag
                 ^
SyntaxError: invalid syntax
[2023-02-01 15:53:21,208] {processor.py:653} WARNING - No viable dags retrieved from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:53:21,244] {processor.py:161} INFO - Processing /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py took 0.068 seconds
[2023-02-01 15:53:52,244] {processor.py:153} INFO - Started process (PID=12034) to work on /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:53:52,245] {processor.py:641} INFO - Processing file /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py for tasks to queue
[2023-02-01 15:53:52,246] {logging_mixin.py:115} INFO - [2023-02-01 15:53:52,246] {dagbag.py:507} INFO - Filling up the DagBag from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:53:52,286] {logging_mixin.py:115} INFO - [2023-02-01 15:53:52,285] {dagbag.py:320} ERROR - Failed to import: /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
Traceback (most recent call last):
  File "/home/tinmar/.local/lib/python3.10/site-packages/airflow/models/dagbag.py", line 317, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py", line 15
    from Airflow2-0-De-0-a-Heroe.pyspark_subdag import mySubDag
                 ^
SyntaxError: invalid syntax
[2023-02-01 15:53:52,286] {processor.py:653} WARNING - No viable dags retrieved from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:53:52,335] {processor.py:161} INFO - Processing /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py took 0.093 seconds
[2023-02-01 15:54:23,199] {processor.py:153} INFO - Started process (PID=12054) to work on /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:54:23,200] {processor.py:641} INFO - Processing file /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py for tasks to queue
[2023-02-01 15:54:23,200] {logging_mixin.py:115} INFO - [2023-02-01 15:54:23,200] {dagbag.py:507} INFO - Filling up the DagBag from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:54:23,230] {logging_mixin.py:115} INFO - [2023-02-01 15:54:23,230] {dagbag.py:320} ERROR - Failed to import: /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
Traceback (most recent call last):
  File "/home/tinmar/.local/lib/python3.10/site-packages/airflow/models/dagbag.py", line 317, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py", line 15
    from Airflow2-0-De-0-a-Heroe.pyspark_subdag import mySubDag
                 ^
SyntaxError: invalid syntax
[2023-02-01 15:54:23,231] {processor.py:653} WARNING - No viable dags retrieved from /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py
[2023-02-01 15:54:23,266] {processor.py:161} INFO - Processing /c/Airflow/dags/Airflow2-0-De-0-a-Heroe/7_dataproc_subdags.py took 0.069 seconds
